--- a/index.html
+++ b/index.html
@@ -6,159 +6,172 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spy Game</title>
     <style>
-        body {
-            font-family: sans-serif;
-            background: #f5f5f5;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 10px;
-            box-sizing: border-box;
-        }
+      body {
+    font-family: sans-serif;
+    background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+}
 
-        .card {
-            width: 90vw;
-            max-width: 200px;
-            height: calc(90vw * 1.5);
-            max-height: 300px;
-            perspective: 1000px;
-            margin: 10px;
-            cursor: pointer;
-            position: relative;
-        }
+/* 卡片容器：使用 CSS Grid 自動排版 */
+#game {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 10px;
+    justify-content: center;
+    width: 100%;
+    max-width: 1000px;
+}
 
-        .inner {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            transform-style: preserve-3d;
-            transition: transform 0.8s;
-        }
+/* 卡片本體：自動保持 2:3 比例 */
+.card {
+    width: 100%;
+    aspect-ratio: 2 / 3;
+    max-width: 200px;
+    perspective: 1000px;
+    cursor: pointer;
+    position: relative;
+    margin: auto;
+}
 
-        .flipped .inner {
-            transform: rotateY(180deg);
-        }
+/* 卡片翻轉效果 */
+.inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.8s;
+}
 
-        .face {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            backface-visibility: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            text-align: center;
-            padding: 10px;
-            box-sizing: border-box;
-            flex-direction: column;
-        }
+.flipped .inner {
+    transform: rotateY(180deg);
+}
 
-        .back {
-            background: #4e73df;
-            color: white;
-        }
+.face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    text-align: center;
+    padding: 10px;
+    box-sizing: border-box;
+    flex-direction: column;
+}
 
-        .front {
-            background: white;
-            color: #333;
-            transform: rotateY(180deg);
-            position: relative;
-        }
+.back {
+    background: #4e73df;
+    color: white;
+}
 
-        .execution-result {
-            margin-top: 10px;
-            font-size: 20px;
-            font-weight: bold;
-        }
+.front {
+    background: white;
+    color: #333;
+    transform: rotateY(180deg);
+    position: relative;
+}
 
-        .execution-result.success {
-            color: #388e3c;
-        }
+/* 卡片上方的玩家名稱 */
+.player-label {
+    position: absolute;
+    top: -20px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+}
 
-        .execution-result.fail {
-            color: #d32f2f;
-        }
+/* 翻牌後的執行結果訊息 */
+.execution-result {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+.execution-result.success {
+    color: #388e3c;
+}
+.execution-result.fail {
+    color: #d32f2f;
+}
 
-        #game {
-            display: none;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            max-width: 800px;
-        }
+/* 輸入與按鈕樣式 */
+button, input {
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+}
 
-        button,
-        input {
-            padding: 10px;
-            margin-top: 10px;
-            font-size: 16px;
-        }
+#startBtn,
+#restartBtn,
+#doneFlipBtn,
+#confirmNamesBtn {
+    background-color: #2e59d9;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+#startBtn:hover,
+#restartBtn:hover,
+#doneFlipBtn:hover,
+#confirmNamesBtn:hover {
+    background-color: #224abe;
+}
 
-        #startBtn,
-        #restartBtn,
-        #doneFlipBtn,
-        #confirmNamesBtn {
-            background-color: #2e59d9;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
+#doneFlipBtn {
+    margin-top: 10px;
+}
 
-        #startBtn:hover,
-        #restartBtn:hover,
-        #doneFlipBtn:hover,
-        #confirmNamesBtn:hover {
-            background-color: #224abe;
-        }
+/* 名字輸入欄 */
+#nameInputContainer input {
+    display: block;
+    margin-bottom: 8px;
+    width: 200px;
+    font-size: 16px;
+    padding: 6px 8px;
+}
 
-        #doneFlipBtn {
-            margin-top: 10px;
-        }
+/* 提示訊息 */
+#message {
+    color: red;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: none;
+}
 
-        .player-label {
-            position: absolute;
-            top: -20px;
-            left: 0;
-            width: 100%;
-            text-align: center;
-            font-weight: bold;
-        }
+/* 語言切換按鈕 */
+#langToggle {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 6px 10px;
+    font-size: 14px;
+    background: #2e59d9;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
 
-        #nameInputContainer input {
-            display: block;
-            margin-bottom: 8px;
-            width: 200px;
-            font-size: 16px;
-            padding: 6px 8px;
-        }
+/* 👉 手機橫向時強制一行顯示 4 張卡片 */
+@media (max-width: 800px) and (orientation: landscape) {
+    #game {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
 
-        #message {
-            color: red;
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            display: none;
-        }
-
-        #langToggle {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            padding: 6px 10px;
-            font-size: 14px;
-            background: #2e59d9;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-        }
     </style>
 </head>
 
