--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spy Game</title>
     <style>
-      body {
+body {
     font-family: sans-serif;
     background: #f5f5f5;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start; /* ✅ 要從上往下排 */
     min-height: 100vh;
     margin: 0;
-    padding: 10px;
+    padding: 80px 10px 10px;  /* ✅ 這行是重點！ */
     box-sizing: border-box;
 }
 
 /* 卡片容器：使用 CSS Grid 自動排版 */
 #game {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     gap: 10px;
     justify-content: center;
     width: 100%;
@@ -38,6 +38,7 @@
     cursor: pointer;
     position: relative;
     margin: auto;
+    margin-bottom: 30px;
 }
 
 /* 卡片翻轉效果 */
@@ -63,7 +64,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
+    font-size: 18px;
     text-align: center;
     padding: 10px;
     box-sizing: border-box;
@@ -94,7 +95,7 @@
 
 /* 翻牌後的執行結果訊息 */
 .execution-result {
-    margin-top: 10px;
+	margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
 }
@@ -147,7 +148,7 @@ button, input {
     color: red;
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     display: none;
 }
 
@@ -157,7 +158,7 @@ button, input {
     top: 10px;
     right: 60px;
     padding: 6px 10px;
-	height: 32px;
+	    height: 32px;
     font-size: 14px;
     background: #2e59d9;
     color: white;
@@ -172,7 +173,7 @@ button, input {
     top: 10px;
     right: 10px;
     padding: 6px 10px;
-	height: 32px;
+		    height: 32px;
     font-size: 14px;
     background: #2e59d9;
     color: white;
@@ -180,7 +181,6 @@ button, input {
     border-radius: 6px;
     cursor: pointer;
 }
-
 
 
 /* 👉 手機橫向時強制一行顯示 4 張卡片 */
@@ -351,7 +351,7 @@ button, input {
 
         function initGame(playerCount, playerNames) {
             document.getElementById('start').style.display = 'none';
-            game.style.display = 'flex';
+            game.style.display = 'grid';
             game.innerHTML = '';
             executionResult.textContent = '';
             executionResult.className = '';
