--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             perspective: 1000px;
             cursor: pointer;
             user-select: none;
+			margin-bottom:10px
         }
 
         .inner {
