--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             width: 100%;
             text-align: center;
             font-weight: bold;
-            color: #aaa;
+            color: white;
         }
 
         .execution-result {
