--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 rule: "Rules for reference only: Find all spies, civilians win. Reach miss kills, spies win.",
                 colPlayer: "Players",
                 colSpy: "Spies",
-                colMissKill: "Miss"
+                colMissKill: "Miss Kill"
             }
         };
 
@@ -561,7 +561,7 @@
             document.getElementById('rule').textContent = i18n[currentLang].rule;
             document.getElementById('colPlayer').textContent = i18n[currentLang].colPlayer;
             document.getElementById('colSpy').textContent = i18n[currentLang].colSpy;
-            document.getElementById('colMissKill').textContent = i18n[currentLang].colPlayer;
+            document.getElementById('colMissKill').textContent = i18n[currentLang].colMissKill;
 
             const inputs = document.querySelectorAll('#nameInputContainer input');
             inputs.forEach((input, i) => {
