--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 rule: "Rules for reference only: Find all spies, civilians win. Reach miss kills, spies win.",
                 colPlayer: "Players",
                 colSpy: "Spies",
-                colMissKill: "Miss Kill"
+                colMissKill: "Miss Kills"
             }
         };
 
