--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spy Game</title>
+    <title>Spy Game v25</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
