--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div id="executionResult"></div>
 
     <div id="ruleBox" style="display:none; position: fixed; top: 60px; right: 10px; background: #333; color: #fff; border: 1px solid #555; border-radius: 8px; padding: 12px; z-index: 999; max-width: 300px; font-size: 14px;">
-        <div id="rule" style="font-weight: bold; margin-bottom: 6px;">規則僅供參考: 抓到所有間諜，平民勝。誤殺達標，間諜勝</div>
+        <div id="rule" style="font-weight: bold; margin-bottom: 6px;">規則僅供參考: 抓到所有間諜，平民勝。誤殺達標，間諜勝。</div>
         <table border="1" style="width:100%; border-collapse: collapse;">
             <thead>
                 <tr>
